--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "@hookform/resolvers": "^4.1.3",
     "framer-motion": "^12.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
     "react-scroll": "^1.9.3",
     "react-simple-typewriter": "^5.0.1",
     "swiper": "^11.2.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
